# documentation

./: .gitignore  .readthedocs.yml  meson.build  readme.md
doc/: doxyfile.in  meson.build
doc/sphinx/: meson.build
doc/sphinx/source/: conf.py  index.rst
mbh/: meson.build
mbh/include/: mbh.h
mbh/src/: mbh.cpp
python/: meson.build  utils.py.in
python/mbhpy/: __init__.py  holdthat.py
useful/: doc_environment.yml
