#######################################################################
# External dependencies

# Doxygen

doxy_exe = find_program( [ 'doxygen',
                           '/usr/bin/doxygen' ],
                         required : true )

#######################################################################
# 

#######################################################################
